# SlimeProject

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cmake-build-multi-platform.yml.yml  cmake-multi-platform.yml  cmake-test-multi-platform.yml  multi-platform-build.yml  multi-platform-test.yml  testing-runner.yml
Shaders/: shader.vert  shader.vert.spv
SlimeGame/: CMakeLists.txt  README.md
SlimeGame/src/: Application.cpp  Application.h  DebugScene.cpp  DebugScene.h  PlatformerGame.cpp  PlatformerGame.h  main.cpp  scene.cpp  scene.h
SlimeOdyssey/: CMakeLists.txt  README.md
SlimeOdyssey/cmake/: CopyOrLink.cmake  compile_shaders.cmake  fetch_libs.cmake  link_libs.cmake  link_vulkan.cmake
SlimeOdyssey/include/: Camera.h  Component.h  ComponentInspector.h  DescriptorManager.h  Engine.h  Entity.h  EntityManager.h  InputManager.h  Light.h  Material.h  MaterialManager.h  Model.h  ModelManager.h  PipelineGenerator.h  RenderPassManager.h  Renderer.h  ResourcePathManager.h  Scene.h  ShaderManager.h  ShadowSystem.h  SlimeWindow.h  VulkanContext.h  VulkanDebugUtils.h  VulkanUtil.h
SlimeOdyssey/include/RenderPasses/: GridRenderPass.h  ImGuiRenderPass.h  MainRenderPass.h  RenderPassBase.h  ShadowRenderPass.h
SlimeOdyssey/resources/shaders/: basic.frag  basic.mesh  basic.vert  grid.frag  grid.vert  shadowmap.frag  shadowmap.vert  triangle.frag  triangle.vert  wire.frag  wire.vert
SlimeOdyssey/src/: Camera.cpp  ComponentInspector.cpp  DescriptorManager.cpp  Engine.cpp  Entity.cpp  EntityManager.cpp  InputManager.cpp  Light.cpp  Material.cpp  MaterialManager.cpp  Model.cpp  ModelManager.cpp  PipelineGenerator.cpp  Renderer.cpp  ResourcePathManager.cpp  ShaderManager.cpp  ShadowSystem.cpp  SlimeWindow.cpp  VulkanContext.cpp
SlimeOdyssey/src/RenderPasses/: GridRenderPass.cpp  ImGuiRenderPass.cpp  MainRenderPass.cpp  ShadowRenderPass.cpp
SlimeTests/: CMakeLists.txt  CameraInitializing.cpp  GPU.cpp  Input.cpp  Lighting.cpp  Model.cpp  ModelLoading.cpp  README.md  Shader.cpp  ShaderLoading.cpp  Shadow.cpp  second_test.cpp  test_main.cpp
cmake/: FindVulkan.cmake  compile_shaders.cmake
scripts/: ConvertAndCreateMD.py  ConvertXMLtoJson.py  OutPutResultsToJsons.py  format_txt_to_xml.py  junitout.xml  test-result.json
shaders/: basic.frag  basic.vert
src/: Engine.cpp  Engine.h  PipelineGenerator.cpp  PipelineGenerator.h  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h  ResourcePathManager.cpp  ResourcePathManager.h  ShaderManager.cpp  ShaderManager.h  SlimeWindow.cpp  SlimeWindow.h  main.cpp  scene.cpp  scene.h
src/Vulkan/: fileHelper.h  vk_mem_alloc.h  vulkanDescriptorSet.cpp  vulkanDescriptorSet.h  vulkanGraphicsPipeline.cpp  vulkanGraphicsPipeline.h  vulkanHelper.cpp  vulkanModel.cpp  vulkanModel.h  vulkanShader.cpp  vulkanShader.h  vulkanhelper.cpp  vulkanhelper.h  vulkanwindow.cpp  vulkanwindow.h  window.cpp  window.h
tests/: open_close.bat  open_close.sh
